src/test/ui/parser/match-vec-invalid.stderr
error: expected one of `,` or `@`, found `..`
  --> $DIR/match-vec-invalid.rs:6:25
   |
LL |         [1, tail.., tail..] => {}, //~ ERROR: expected one of `,` or `@`, found `..`
   |                         ^^ expected one of `,` or `@` here

error: aborting due to previous error

